# Hacka

./: .gitignore  ANALYSIS_REPORT.md  aadhaar_analysis.ipynb  app.py  cleaned_aadhaar_data.csv  data_loader.py  pyproject.toml
