[tool.poetry]
name = "hacka"
version = "0.1.0"
description = ""
authors = ["Antigravity <antigravity@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "*"
numpy = "*"
matplotlib = "*"
seaborn = "*"
ipykernel = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
